[tool.poetry]
name = "20th-century-fox-rel-2-0"
version = "0.1.0"
description = ""
authors = ["bobantonbob <130400459+bobantonbob@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "20th_century_fox_rel_2"}]

[tool.poetry.dependencies]
python = "3.11.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
